<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#cccccc" >

    	<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/host_label"
            android:text="@string/host_label"
            android:layout_marginLeft="30dip"
            android:layout_marginTop="50dip" 
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#000"
            />
    	<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/host_text"
            android:layout_toRightOf="@id/host_label"
            android:layout_alignBottom="@id/host_label"
            android:layout_marginLeft="40dip" 
            android:textSize="24dp"
            android:textColor="#000"
            />
    	<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/port_label"
            android:text="@string/port_label"
            android:layout_below="@id/host_label"
            android:layout_marginTop="20dip"
            android:layout_alignLeft="@id/host_label"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#000"
         	/>
        <EditText 
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:id="@+id/port_text"
            android:layout_toRightOf="@id/port_label"
            android:layout_alignBaseline="@id/port_label"
            android:layout_marginLeft="40dip"
            android:inputType="number" 
            android:singleLine="true"
            android:textSize="18dp"
         	/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_text"
            android:layout_below="@id/port_label"
            android:layout_marginTop="20dip"
            android:layout_alignLeft="@id/port_label"
            android:textSize="18dp"
            android:textColor="#000"
         	/>
        <Button 
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:id="@+id/start_button"
            android:text="@string/start_button" 
            android:layout_marginLeft="50dip"
    		android:layout_alignParentBottom="true"
    		android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#000"
    		/>
         
    	<Button 
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:id="@+id/stop_button"
            android:text="@string/stop_button" 
            android:layout_toRightOf="@id/start_button"
    		android:layout_alignParentBottom="true"
    		android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#000"
    		/>
    	<Button 
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:id="@+id/refresh_button"
            android:text="@string/refresh_button" 
            android:layout_toRightOf="@id/stop_button"
    		android:layout_alignParentBottom="true"
    		android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#000"
    		/>

</RelativeLayout>